kubernetes/app.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-deployment
  namespace: kiii
spec:
  replicas: 3
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
        namespace: kiii
    spec:
      containers:
        - name: app
          image: adzhiev007/kii-project-app:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: app-svc
  namespace: kiii
spec:
  selector:
    app: app
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
