kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: kiii
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    -  host: "201102.com"
       http:
         paths:
           - pathType: Prefix
             path: "/"
             backend:
               service:
                 name: app-svc
                 port:
                   number: 8080
